<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lysterr</string>
    <string name="new_post_label">New Post</string>

    <string name="search">Search</string>

    <!-- menu -->
    <string name="menu_post">Post</string>
    <string name="menu_post_car">Car</string>
    <string name="menu_post_generic_item">Generic Item</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_chat">Chat</string>

    <!-- error messages -->
    <string name="error_post_details_load">Failed to load post details, please go back and try again</string>
    <string name="error_post_image_load">Failed to load image, sorry about that</string>
    <string name="error_invalid_price">Please provide a valid price</string>
    <string name="error_no_camera_available">There is no camera available on this device</string>

    <string name="get_post_image_button">Capture item photo</string>
    <string name="select_post_image_button">Pick item photo</string>
    <string name="new_post_details_instructions">Please tell us something about the object</string>
    <string name="new_post_car_details_instructions">Please tell us something about the car</string>
    <string name="new_post_details_name">Name</string>
    <string name="new_post_details_price">Price</string>
    <string name="new_post_details_custom">Custom (optional)</string>
    <string name="new_post_details_next">Next</string>
    <string name="new_post_conditions_excellent">Excellent</string>
    <string name="new_post_conditions_good">Good</string>
    <string name="new_post_conditions_average">Average</string>
    <string name="new_post_approve">Approve</string>

    <string name="new_post_car_year">Year</string>
    <string name="new_post_car_color">Color</string>
    <string name="new_post_car_make">Make</string>
    <string name="new_post_car_model">Model</string>
    <string name="new_post_car_price">Price</string>
    <string name="new_post_car_miles">Miles (optional)</string>
    <string name="new_post_car_doors"># Doors (optional)</string>

    <string name="format_poster_line">Posted by %1$s</string>

</resources>
